acomodo los botones y se tradujo al espanol

--- a/desayunos-arkus/src/app/components/home/DialogMenu/dialog-menu.component.html
+++ b/desayunos-arkus/src/app/components/home/DialogMenu/dialog-menu.component.html
@@ -1,6 +1,6 @@
 <div class="title">
   <h1 mat-dialog-title>Registro {{data.dateStr}}</h1>
-  <button mat-stroked-button color="primary" (click)="handleSaveButton()" *ngIf="ActDi < inputDate">Register</button>
+  <button class="regi" mat-stroked-button color="primary" (click)="handleSaveButton()" *ngIf="ActDi < inputDate">Register</button>
 </div>
 <div class="containerDialog">
   <div class="columnUsers">
