se agrego la edicion del perfil, y otros bugs menores que impedian que la aplicacion arrancara de manera correcta

--- a/desayunos-arkus/src/app/components/perfil/perfil.component.html
+++ b/desayunos-arkus/src/app/components/perfil/perfil.component.html
@@ -16,7 +16,7 @@
       <div class="perfil">{{firstchar}}</div>
     </div>
 
-    <form class="Acomodar" action="" [formGroup]="perfilForm" (ngSubmit)="onSubmit()">
+    <form class="Acomodar" action="" [formGroup]="perfilForm" (ngSubmit)="updateProfile()">
 
       <div class="Firstlast" disabled>
         <mat-form-field appearance="outline">
