--- a/desayunos-arkus/src/app/components/perfil/perfil.component.html
+++ b/desayunos-arkus/src/app/components/perfil/perfil.component.html
@@ -61,7 +61,7 @@
 
         <button mat-raised-button color="primary" type="button" (click)="buttonD()">Editar/Cancelar</button>
       </div>
-      <button class="viss" mat-raised-button color="primary"  (click)="vistaEn()"  >Registrar Usuario</button><br>
+      <button class="viss" mat-raised-button color="primary"  (click)="vistaEn()"  >Ver Usuario Registrados</button><br>
       <div class="cerraSe">
         <a href="" (click)="cerrarSesion()">Cerrar Sesión</a>
         <br><br>
