--- a/desayunos-arkus/src/app/components/home/DialogMenu/dialog-menu.component.html
+++ b/desayunos-arkus/src/app/components/home/DialogMenu/dialog-menu.component.html
@@ -6,7 +6,7 @@
   <div class="columnUsers">
     <mat-card *ngFor="let user of UserListPerDay">
       <div class="userInfo">
-        <fa-icon [icon]="faUser" id="faicon"></fa-icon>
+        <img src="../../../assets/img/icons8-user-64.png" height="25"  id="faicon">
         <p id="username">{{user.first_name + " " + user.last_name}}</p>
       </div>
       <button mat-button *ngIf="isAdmin || user.id_user=== isUser && ActDi < inputDate"  color="primary" (click)="handleDeleteUser(user.id_user)">
