--- a/desayunos-arkus/src/app/components/perfil/perfil.component.html
+++ b/desayunos-arkus/src/app/components/perfil/perfil.component.html
@@ -65,7 +65,7 @@
         <a href="" (click)="cerrarSesion()">Sign Out</a>
       </div>
 
-      <button mat-raised-button color="primary"  (click)="vistaEn()"  >Vista</button>
+      <button *ngIf="isAdmin" mat-raised-button color="primary" (click)="vistaEn()">Vista</button>
     </form>
   </mat-drawer>
 
