--- a/desayunos-arkus/src/app/components/perfil/perfil.component.html
+++ b/desayunos-arkus/src/app/components/perfil/perfil.component.html
@@ -10,15 +10,42 @@
           </path>
         </svg>
       </button>
-        </div>
-        <div mat-dialog-content class="perfilpos">
-            <div mat-dialog-actions>
-                <img *ngIf="image" width="300px" height="300px" [src]="image" alt="">
-                <button mat-button (click)="openarch()" class="perfil">{{firstchar}}</button>
-            </div>
-        </div>
-      
-        <form class="Acomodar" action="" [formGroup]="perfilForm" (ngSubmit)="onSubmit()">
+    </div>
+
+    <div class="perfilpos">
+      <div class="perfil">{{firstchar}}</div>
+    </div>
+
+    <form class="Acomodar" action="" [formGroup]="perfilForm" (ngSubmit)="updateProfile()">
+
+      <div class="Firstlast" disabled>
+        <mat-form-field appearance="outline">
+          <mat-label for="fname">Nombre:</mat-label>
+          <input matInput type="text" id="fname" name="fname" formControlName="firstName"><br>
+          <mat-error *ngIf="firstName.invalid">{{
+            registerFirstNameErrorMessage()
+            }}</mat-error>
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+          <mat-label for="lname">Apellido:</mat-label>
+          <input matInput type="text" id="lname" name="lname" formControlName="lastName"><br>
+          <mat-error *ngIf="lastName.invalid">{{
+            registerLastNameErrorMessage()
+            }}</mat-error>
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+          <mat-label>Modificar Contraseña</mat-label>
+          <input id="passw" name="passw" matInput [type]="hide ? 'password' : 'text'" formControlName="passw">
+          <button mat-icon-button matSuffix type="button" (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+            [attr.aria-pressed]="hide">
+            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+          </button>
+          <mat-error *ngIf="passw.invalid">{{
+            registerPasswordErrorMessage()
+            }}</mat-error>
+        </mat-form-field>
 
             <div class="Firstlast" disabled>
                 <mat-form-field appearance="outline">
@@ -57,15 +84,15 @@
                 </mat-form-field>
             </div>
 
-            <div class="EnvEdi">
-                <button mat-raised-button color="primary" type="submit" [disabled]="!perfilForm.valid">submit</button>
+        <button mat-raised-button color="primary" type="button" (click)="buttonD()">Editar/Cancelar</button>
+      </div>
+      <button class="viss" mat-raised-button color="primary" (click)="vistaEn()">Ver Usuario Registrados</button><br>
+      <div class="cerraSe">
+        <a href="" (click)="cerrarSesion()">Cerrar Sesión</a>
+        <br><br>
+      </div>
 
-                <button mat-raised-button color="primary" type="button" (click)="buttonD()">Edit</button>
-            </div>
-            <div class="cerraSe">
-                <a href="" (click)="cerrarSesion()">Sign Out</a>
-            </div>
-      <button *ngIf="isAdmin" mat-raised-button color="primary" (click)="vistaEn()">Vista</button>
+
     </form>
   </mat-drawer>
 </mat-drawer-container>
