--- a/desayunos-arkus/src/app/components/perfil/perfil.component.html
+++ b/desayunos-arkus/src/app/components/perfil/perfil.component.html
@@ -1,8 +1,8 @@
 <mat-drawer-container class="nav-container" autosize>
 
-    <mat-drawer #drawer class="example-sidenav" mode="over" position="end" style="position: absolute;">
-        <div class="menuH">
-            <button (click)="drawer.toggle()">
+  <mat-drawer #drawer class="example-sidenav" mode="over" position="end" style="position: absolute;">
+    <div class="menuH">
+      <button (click)="drawer.toggle()">
         <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="40" height="35" viewBox="0 0 50 50">
           <path
             d="M 9.15625 6.3125 L 6.3125 9.15625 L 22.15625 25 L 6.21875 40.96875 L 9.03125 43.78125 L 25
@@ -46,45 +46,25 @@
             registerPasswordErrorMessage()
             }}</mat-error>
         </mat-form-field>
+        <mat-form-field appearance="outline">
+          <mat-label for="">Sedes:</mat-label>
+          <mat-select matNativeControl name="curso" formControlName="sedes">
+            <mat-option value="" disabled>Elige una opción</mat-option>
+            <mat-option value="mty">Monterrey</mat-option>
+          </mat-select>
+        </mat-form-field>
 
-            <div class="Firstlast" disabled>
-                <mat-form-field appearance="outline">
-                    <mat-label for="fname">First name:</mat-label>
-                    <input matInput type="text" id="fname" name="fname" formControlName="firstName"><br>
-                </mat-form-field>
-                <mat-form-field appearance="outline">
-                    <mat-label for="lname">Last name:</mat-label>
-                    <input matInput type="text" id="lname" name="lname" formControlName="lastName"><br>
-                    <mat-error>
-                        <!-- {{mensajerror}}-->
-                        First Name is Required!
-                    </mat-error>
-                </mat-form-field>
+        <mat-form-field appearance="outline">
+          <mat-label>Cumpleaños</mat-label>
+          <input matInput [matDatepicker]="dp3" id="dateP" name="dateP" formControlName="datePo" readonly>
+          <mat-datepicker-toggle matSuffix [for]="dp3"></mat-datepicker-toggle>
+          <mat-datepicker #dp3></mat-datepicker>
+        </mat-form-field>
 
-                <mat-form-field appearance="outline">
-                    <mat-label>Modify password</mat-label>
-                    <input id="passw" name="passw" matInput [type]="hide ? 'password' : 'text'" formControlName="passw">
-                    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                    <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                    </button>
-                </mat-form-field>
-              
-                <mat-form-field appearance="outline">
-                    <mat-label for="">Sedes:</mat-label>
-                    <mat-select matNativeControl name="curso" formControlName="sedes">
-                        <mat-option value="" disabled>Elige una opción</mat-option>
-                        <mat-option value="mty">Monterrey</mat-option>
-                    </mat-select>
-                </mat-form-field>
-                <mat-form-field appearance="outline">
-                    <mat-label>birthday date</mat-label>
-                    <input matInput [matDatepicker]="dp3" id="dateP" name="dateP" formControlName="datePo" readonly>
-                    <mat-datepicker-toggle matSuffix [for]="dp3"></mat-datepicker-toggle>
-                    <mat-datepicker #dp3></mat-datepicker>
-                </mat-form-field>
-            </div>
-
-        <button mat-raised-button color="primary" type="button" (click)="buttonD()">Editar/Cancelar</button>
+        <div class="EnvEdi">
+          <button mat-raised-button color="primary" type="submit" [disabled]="!perfilForm.valid">Guardar</button>
+          <button mat-raised-button color="primary" type="button" (click)="buttonD()">Editar/Cancelar</button>
+        </div>
       </div>
       <button class="viss" mat-raised-button color="primary" (click)="vistaEn()">Ver Usuario Registrados</button><br>
       <div class="cerraSe">
@@ -97,7 +77,7 @@
   </mat-drawer>
 </mat-drawer-container>
 <div class="menuH">
-    <button (click)="drawer.toggle()">
+  <button (click)="drawer.toggle()">
     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="40" height="35" viewBox="0 0 50 50">
       <path d="M 0 9 L 0 11 L 50 11 L 50 9 Z M 0 24 L 0 26 L 50 26 L 50 24 Z M 0 39 L 0 41 L 50 41 L 50 39 Z"></path>
     </svg>
