informacion desde base de datos para la vista de usuarios

--- a/desayunos-arkus/src/app/components/perfil/perfil.component.html
+++ b/desayunos-arkus/src/app/components/perfil/perfil.component.html
@@ -3,22 +3,19 @@
     <mat-drawer #drawer class="example-sidenav" mode="over" position="end" style="position: absolute;">
         <div class="menuH">
             <button (click)="drawer.toggle()">
-        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="40" height="35" viewBox="0 0 50 50">
-          <path
-            d="M 9.15625 6.3125 L 6.3125 9.15625 L 22.15625 25 L 6.21875 40.96875 L 9.03125 43.78125 L 25
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="40" height="35" viewBox="0 0 50 50">
+                    <path
+                        d="M 9.15625 6.3125 L 6.3125 9.15625 L 22.15625 25 L 6.21875 40.96875 L 9.03125 43.78125 L 25
               27.84375 L 40.9375 43.78125 L 43.78125 40.9375 L 27.84375 25 L 43.6875 9.15625 L 40.84375 6.3125 L 25 22.15625 Z">
-          </path>
-        </svg>
-      </button>
+                    </path>
+                </svg>
+            </button>
         </div>
         <div mat-dialog-content class="perfilpos">
-            <div mat-dialog-actions>
-                <img *ngIf="image" width="300px" height="300px" [src]="image" alt="">
-                <button mat-button (click)="openarch()" class="perfil">{{firstchar}}</button>
-            </div>
+            <p class="perfil">{{firstchar}}</p>
         </div>
-      
-        <form class="Acomodar" action="" [formGroup]="perfilForm" (ngSubmit)="onSubmit()">
+
+        <form class="Acomodar" action="" [formGroup]="perfilForm" (ngSubmit)="updateProfile()">
 
             <div class="Firstlast" disabled>
                 <mat-form-field appearance="outline">
@@ -37,11 +34,12 @@
                 <mat-form-field appearance="outline">
                     <mat-label>Modify password</mat-label>
                     <input id="passw" name="passw" matInput [type]="hide ? 'password' : 'text'" formControlName="passw">
-                    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                    <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+                        [attr.aria-pressed]="hide">
+                        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                     </button>
                 </mat-form-field>
-              
+
                 <mat-form-field appearance="outline">
                     <mat-label for="">Sedes:</mat-label>
                     <mat-select matNativeControl name="curso" formControlName="sedes">
@@ -56,23 +54,22 @@
                     <mat-datepicker #dp3></mat-datepicker>
                 </mat-form-field>
             </div>
-
             <div class="EnvEdi">
                 <button mat-raised-button color="primary" type="submit" [disabled]="!perfilForm.valid">submit</button>
-
                 <button mat-raised-button color="primary" type="button" (click)="buttonD()">Edit</button>
             </div>
             <div class="cerraSe">
                 <a href="" (click)="cerrarSesion()">Sign Out</a>
             </div>
-      <button *ngIf="isAdmin" mat-raised-button color="primary" (click)="vistaEn()">Vista</button>
-    </form>
-  </mat-drawer>
+            <button *ngIf="isAdmin" mat-raised-button color="primary" (click)="vistaEn()">Vista</button>
+        </form>
+    </mat-drawer>
 </mat-drawer-container>
 <div class="menuH">
     <button (click)="drawer.toggle()">
-    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="40" height="35" viewBox="0 0 50 50">
-      <path d="M 0 9 L 0 11 L 50 11 L 50 9 Z M 0 24 L 0 26 L 50 26 L 50 24 Z M 0 39 L 0 41 L 50 41 L 50 39 Z"></path>
-    </svg>
-  </button>
+        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="40" height="35" viewBox="0 0 50 50">
+            <path d="M 0 9 L 0 11 L 50 11 L 50 9 Z M 0 24 L 0 26 L 50 26 L 50 24 Z M 0 39 L 0 41 L 50 41 L 50 39 Z">
+            </path>
+        </svg>
+    </button>
 </div>
