--- a/desayunos-arkus/src/app/components/vista-de-usuario/vista-de-usuario.component.html
+++ b/desayunos-arkus/src/app/components/vista-de-usuario/vista-de-usuario.component.html
@@ -1,35 +1,69 @@
-<div class="usersview">
-    <div class="header">
-        <img src="https://uploads-ssl.webflow.com/5e589a8b7bb9af87ad968338/613c50e0018116747c3bc5bc_ArkusNexus_MainLogo.svg"
-            width="400" height="70">
-    </div>
-    
-        <div class="containerDialog">
-            <div class="col-12 columnUsers">
-                <fa-icon [icon]="faSave" class="faicon" ></fa-icon><!--(click)=""-->
-                <fa-icon [icon]="faTimes" class="faicon" ></fa-icon><!--(click)=""-->
-            </div>
-        </div>
-    <!-- <div class="user"> -->
-        <mat-card for="deleteuser">
-            <div class="userIdentifier">
-                <fa-icon [icon]="faUserCircle" class="userimg"></fa-icon>
-                <p class="username">Liliana Medina</p>
-            </div>
-            <div class="roles">
-                <mat-form-field appearance="fill">
-                    <mat-label>Roles</mat-label>
-                    <mat-select matNativeControl>
-                        <mat-option value="2">Colaborador</mat-option>
-                        <mat-option value="1">Admin</mat-option>
-                    </mat-select>
-                </mat-form-field>
-            </div>
-            <!-- {{user.first_name + " " + user.last_name}} -->
-            <div class="delete">
-                <p>Eliminar usuario?</p>
-                <input type="checkbox" name="" id="deleteuser">
-            </div>
-        </mat-card>
-    <!-- </div> -->
+<div class="header">
+    <img src="https://uploads-ssl.webflow.com/5e589a8b7bb9af87ad968338/613c50e0018116747c3bc5bc_ArkusNexus_MainLogo.svg"
+        width="400" height="70">
 </div>
+
+<mat-toolbar color="primary">
+    <mat-toolbar-row>
+        <span>Usuarios Registrados</span>
+        <span class="example-spacer"></span>
+        <button mat-icon-button>
+            <mat-icon>save</mat-icon>
+        </button>
+        <button mat-icon-button (click)="removeData()">
+            <mat-icon>delete</mat-icon>
+        </button>
+        <button mat-icon-button (click)="homeReturn()">
+            <mat-icon>home</mat-icon>
+        </button>
+    </mat-toolbar-row>
+</mat-toolbar>
+
+<mat-form-field appearance="outline">
+    <mat-label>Filtrar Usuarios</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Nombre, Apellido" #input>
+</mat-form-field>
+<table mat-table [dataSource]="dataToDisplay">
+    <!--Checkbox Column-->
+    <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef>
+            <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
+                [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
+            </mat-checkbox>
+        </th>
+        <td mat-cell *matCellDef="let row">
+            <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
+                [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)">
+            </mat-checkbox>
+        </td>
+    </ng-container>
+    <!--Photo/Icon Column-->
+    <ng-container matColumnDef="image">
+        <th mat-header-cell *matHeaderCellDef class="profileImage">Imagen de Perfil</th>
+        <td mat-cell *matCellDef="let users" class="profileImage"><img src="{{users.image}}"></td>
+    </ng-container>
+    <!--Name Column-->
+    <ng-container matColumnDef="first_name">
+        <th mat-header-cell *matHeaderCellDef class="firstname">Nombre</th>
+        <td mat-cell *matCellDef="let users" class="firstname"> {{users.first_name}} </td>
+    </ng-container>
+    <!--Last Name Column-->
+    <ng-container matColumnDef="last_name">
+        <th mat-header-cell *matHeaderCellDef class="lastname">Apellido</th>
+        <td mat-cell *matCellDef="let users" class="lastname"> {{users.last_name}} </td>
+    </ng-container>
+    <!--UserType Column-->
+    <ng-container matColumnDef="id_user_type">
+        <th mat-header-cell *matHeaderCellDef class="usertype">Tipo de Usuario</th>
+        <td mat-cell *matCellDef="let users" class="usertype">
+            <mat-form-field appearance="fill">
+                <mat-select [(value)]=users.id_user_type>
+                    <mat-option [value]="type.value" *ngFor="let type of userstype">{{type.display}}</mat-option>
+                </mat-select>
+            </mat-form-field>
+        </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)"></tr>
+</table>
