--- a/desayunos-arkus/src/app/components/login-registro/login-registro.component.html
+++ b/desayunos-arkus/src/app/components/login-registro/login-registro.component.html
@@ -130,7 +130,7 @@
       </mat-tab>
     </mat-tab-group>
     <!-- Recaptcha v2 -->
-    <div>
+    <div class="captchaDiv">
       <form [formGroup]="fCaptcha" style="width: min-content; height: min-content;">
         <ngx-recaptcha2 #captchaElem [siteKey]="siteKey" formControlName="recaptcha">
         </ngx-recaptcha2>
