--- a/desayunos-arkus/src/app/components/home/DialogMenu/dialog-menu.component.html
+++ b/desayunos-arkus/src/app/components/home/DialogMenu/dialog-menu.component.html
@@ -6,10 +6,10 @@
   <div class="columnUsers">
     <mat-card *ngFor="let user of UserListPerDay">
       <div class="userInfo">
-        <img src="../../../assets/img/icons8-user-64.png" height="25"  id="faicon">
+        <img alt="User Profile" src="../../../assets/img/icons8-user-64.png" height="25"  id="faicon">
         <p id="username">{{user.first_name + " " + user.last_name}}</p>
       </div>
-      <button mat-button *ngIf="ActDi < inputDate && (isAdmin || user.id_user=== isUser)"  color="primary" (click)="handleDeleteUser(user.id_user)">
+      <button type="button" title="button" mat-button *ngIf="ActDi < inputDate && (isAdmin || user.id_user=== isUser)"  color="primary" (click)="handleDeleteUser(user.id_user)">
         <fa-icon [icon]="faTimes"></fa-icon>
       </button>
     </mat-card>
