--- a/desayunos-arkus/src/app/components/home/home.component.html
+++ b/desayunos-arkus/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<app-perfil></app-perfil>
+<!-- <app-perfil></app-perfil>
 <div class="calendar">
- <full-calendar *ngIf="!isLoading" [options]="options" #calendar></full-calendar> 
-</div>
+    <full-calendar  [options]="options" #calendar></full-calendar> *ngIf="!isLoading"
+</div> -->
