Created big-day component and start structure of html

--- a/desayunos-arkus/src/app/components/home/home.component.html
+++ b/desayunos-arkus/src/app/components/home/home.component.html
@@ -1,4 +1,1 @@
-<app-perfil></app-perfil>
-<div class="calendar">
- <full-calendar *ngIf="!isLoading" [options]="options" #calendar></full-calendar> 
-</div>
+<app-big-day></app-big-day>
