--- a/desayunos-arkus/src/app/components/big-day/big-day.component.html
+++ b/desayunos-arkus/src/app/components/big-day/big-day.component.html
@@ -9,9 +9,15 @@
                 </mat-card-header>
             </mat-card>
         </div>
-        <div class="usersInfo"></div>
-        <div class="calendar"></div>
-        <div class="footer"></div>
+        <div class="usersInfo">
+
+        </div>
+        <div class="calendar">
+
+        </div>
+        <div class="footer">
+            
+        </div>
     </div>
 </div>
 
