--- a/desayunos-arkus/src/app/components/calendar-day/calendar-day.component.html
+++ b/desayunos-arkus/src/app/components/calendar-day/calendar-day.component.html
@@ -1,12 +1,12 @@
-<mat-card>
+<mat-card [ngClass]="getCssFestClass(festiveType)">
   <mat-card-header>
-    <mat-card-title>
+    <button mat-mini-fab color="primary" (click)="handleDayClick(dayNumber)">
       <p style="margin-bottom: 0px;" [(ngModel)]="dayNumber">{{dayNumber}}</p>
-    </mat-card-title>
+    </button>
   </mat-card-header>
   <mat-card-content>
     <mat-list role="list">
-      <mat-list-item role="listitem" *ngFor="let bf of breakfasts">
+      <mat-list-item role="listitem" *ngFor="let bf of myBreakfasts">
         <div class="myDiv">
           <mat-icon>person</mat-icon>
           <p>{{bf.name}}</p>
@@ -15,7 +15,7 @@
     </mat-list>
   </mat-card-content>
   <mat-card-footer>
-    <button mat-mini-fab color="primary" aria-label="Example icon button with a menu icon">
+    <button mat-mini-fab color="primary" (click)="handleSaveButton()" [disabled]="isButtonEnabled()">
       <mat-icon>fastfood</mat-icon>
     </button>
   </mat-card-footer>
