bigDay component done

--- a/desayunos-arkus/src/app/components/big-day/big-day.component.html
+++ b/desayunos-arkus/src/app/components/big-day/big-day.component.html
@@ -4,13 +4,13 @@
       <mat-card class="bigDay">
         <mat-card-header>
           <mat-card-title>
-            <p style="margin-bottom: 0px" [(ngModel)]="date">
+            <p style="margin-bottom: 0px">
               {{ dayNumber }}
             </p>
           </mat-card-title>
         </mat-card-header>
         <mat-card-footer>
-          <p style="margin-bottom: 0px" [(ngModel)]="date">{{ dayName }}</p>
+          <p style="margin-bottom: 0px" >{{ weekDayName }}</p>
         </mat-card-footer>
       </mat-card>
     </div>
