--- a/desayunos-arkus/src/app/components/home/home.component.html
+++ b/desayunos-arkus/src/app/components/home/home.component.html
@@ -1,1 +1,4 @@
-<app-big-day></app-big-day>
+<app-perfil></app-perfil>
+<div class="calendar">
+ <full-calendar *ngIf="!isLoading" [options]="options" #calendar></full-calendar> 
+</div>
