--- a/desayunos-arkus/src/app/components/calendar-day/calendar-day.component.scss
+++ b/desayunos-arkus/src/app/components/calendar-day/calendar-day.component.scss
@@ -1,42 +1,67 @@
-.mat-card {
+.card {
   border-color: lightgray;
-  border-radius: 32px;
-  border-width: 1px;
-  border: solid;
+  border-radius: 30px;
+  border: solid 2px lightgray;
+  box-shadow: 0px 0px 10px 0px lightgray;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  padding: 10px;
   min-height: 200px;
   min-width: 200px;
-  .mat-card-header {
+  background-color: white;
+  transition: backround-color 200ms ease-in-out;
+  .header {
     display: flex;
     justify-content: right;
-    .mat-card-title {
-      font-size: 20px;
-      height: 30px;
-      line-height: 20px;
-      margin: 0px;
-    }
+    font-size: 20px;
+    height: 30px;
+    line-height: 20px;
+    margin: 0px;
+    margin-bottom: 10px;
   }
-  .mat-card-actions,
-  .mat-card-subtitle,
-  .mat-card-content {
-    margin-bottom: 4px;
-    .mat-list-base {
+  .content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .contentWrapper {
+      width: fit-content;
+      height: fit-content;
       display: flex;
       flex-direction: column;
-      .mat-list-item {
+      align-items: flex-start;
+      .listItem {
         display: flex;
-        font-size: 12px;
-        height: 20px;
-        justify-content: space-between;
-        padding: 0px;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        .pItem {
+          margin: 0px;
+        }
       }
     }
   }
-  .mat-card-footer {
-    padding: 10px;
+
+  .footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .footerPlus {
+      width: 40px;
+      margin: 0px;
+      font-size: large;
+      text-align: center;
+    }
   }
+}
+
+.card:hover {
+  box-shadow: 0px 0px 40px 0px lightgray;
+}
+
+.cardPastDay {
+  opacity: 0.5;
+  background-color: lightgrey;
 }
 
 .mat-button,
