--- a/desayunos-arkus/src/app/components/calendar/calendar.component.scss
+++ b/desayunos-arkus/src/app/components/calendar/calendar.component.scss
@@ -1,10 +1,11 @@
 .main {
-  padding: 15px;
+  padding: 30px;
   border: solid 1px lightgray;
-  border-radius: 16px;
+  border-radius: 60px;
   box-shadow: 0px 0px 10px 0px black;
+  width: fit-content;
+  height: fit-content;
   display: grid;
   grid-template-columns: 200px 200px 200px 200px 200px;
-  grid-template-rows: 200px 200px 200px 200px 200px 200px;
   gap: 15px 15px;
 }
