added calendar week day names

--- a/desayunos-arkus/src/app/components/calendar/calendar.component.html
+++ b/desayunos-arkus/src/app/components/calendar/calendar.component.html
@@ -1,4 +1,9 @@
 <div class="main">
+  <p>Lunes</p>
+  <p>Martes</p>
+  <p>Miércoles</p>
+  <p>Jueves</p>
+  <p>Viernes</p>
   <app-calendar-day *ngFor="let day of days" [date]="day.date" [breakfasts]="day.breakfasts" [userData]="userData"
     [festiveType]="day.festiveType" [handleDayClick]="handleDayClick"></app-calendar-day>
 </div>
