added calendar month and year title

--- a/desayunos-arkus/src/app/components/calendar/calendar.component.html
+++ b/desayunos-arkus/src/app/components/calendar/calendar.component.html
@@ -1,4 +1,6 @@
 <div class="main">
+  <h1 class="monthTitle" [ngModel]="monthName" ngDefaultControl>{{monthName}}</h1>
+  <h1 class="yearTitle" [ngModel]="year" ngDefaultControl>{{year}}</h1>
   <p>Lunes</p>
   <p>Martes</p>
   <p>Miércoles</p>
