--- a/desayunos-arkus/src/app/components/calendar/calendar.component.scss
+++ b/desayunos-arkus/src/app/components/calendar/calendar.component.scss
@@ -10,6 +10,21 @@
   gap: 15px 15px;
 }
 
+.monthTitle {
+  text-align: left;
+  grid-column-start: auto;
+  grid-column-end: span 3;
+  margin: 30px;
+  font-size: 80px;
+}
+.yearTitle {
+  text-align: end;
+  grid-column-start: auto;
+  grid-column-end: span 2;
+  margin: 30px;
+  font-size: 80px;
+}
+
 p {
   text-align: center;
   margin: 0px;
