--- a/desayunos-arkus/src/app/components/calendar/calendar.component.html
+++ b/desayunos-arkus/src/app/components/calendar/calendar.component.html
@@ -7,5 +7,6 @@
   <p>Jueves</p>
   <p>Viernes</p>
   <app-calendar-day *ngFor="let day of days" [date]="day.date" [breakfasts]="day.breakfasts" [userData]="userData"
-    [festiveType]="day.festiveType" [handleDayClick]="handleDayClick"></app-calendar-day>
+    [festiveType]="day.festiveType" [handleDayClick]="handleDayClick" (registered)="ngOnInit()">
+  </app-calendar-day>
 </div>
