--- a/desayunos-arkus/src/app/components/calendar-day/calendar-day.component.html
+++ b/desayunos-arkus/src/app/components/calendar-day/calendar-day.component.html
@@ -1,13 +1,13 @@
 <div [ngClass]="['card',getCssFestClass(festiveType), getCssPastDay()]">
   <div class="header">
-    <button mat-mini-fab color="'white'" style="border: solid 1px red;" (click)="handleDayClick(dayNumber)">
+    <button mat-mini-fab color="'white'" (click)="handleDayClick(dayNumber)">
       <p style="margin-bottom: 0px;" [(ngModel)]="dayNumber" ngDefaultControl>{{dayNumber}}</p>
     </button>
   </div>
   <div class="content">
     <div class="contentWrapper">
       <div class="listItem" *ngFor="let bf of myBreakfasts">
-        <mat-icon>person</mat-icon>
+        <mat-icon class="contIcon" [inline]="true">person</mat-icon>
         <p class="pItem">{{bf.name}}</p>
       </div>
     </div>
@@ -15,7 +15,7 @@
 
   <div class="footer">
     <button mat-mini-fab color="primary" (click)="handleSaveButton()" [disabled]="isButtonEnabled()">
-      <mat-icon>fastfood</mat-icon>
+      <mat-icon [inline]="true">fastfood</mat-icon>
     </button>
     <p *ngIf="breakfasts.length > 4" class="footerPlus" [(ngModel)]="breakfasts" ngDefaultControl>+{{breakfasts.length -
       4}}</p>
