--- a/desayunos-arkus/src/app/components/calendar-day/calendar-day.component.scss
+++ b/desayunos-arkus/src/app/components/calendar-day/calendar-day.component.scss
@@ -1,24 +1,33 @@
 .card {
   border-color: lightgray;
-  border-radius: 30px;
+  border-radius: 1.875em;
   border: solid 2px lightgray;
   box-shadow: 0px 0px 10px 0px lightgray;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 10px;
-  min-height: 200px;
-  min-width: 200px;
+  padding: 0.625em;
+  min-height: 12.5em;
+  width: 12.5em;
   background-color: white;
   transition: backround-color 200ms ease-in-out;
   .header {
     display: flex;
     justify-content: right;
-    font-size: 20px;
-    height: 30px;
-    line-height: 20px;
-    margin: 0px;
-    margin-bottom: 10px;
+    font-size: 1.25em;
+    height: 1.5em;
+    line-height: 1em;
+    margin: 0;
+    margin-bottom: 0.5em;
+    button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border: solid 1px red;
+      width: 2em;
+      height: 2em;
+      font-size: 1em;
+    }
   }
   .content {
     display: flex;
@@ -36,7 +45,7 @@
         justify-content: center;
         align-items: center;
         .pItem {
-          margin: 0px;
+          margin: 0;
         }
       }
     }
@@ -46,10 +55,19 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-size: 1.25em;
+    button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 2em;
+      height: 2em;
+      font-size: 1em;
+    }
     .footerPlus {
-      width: 40px;
-      margin: 0px;
-      font-size: large;
+      width: 2.5em;
+      margin: 0;
+      font-size: 1em;
       text-align: center;
     }
   }
