--- a/desayunos-arkus/src/app/components/big-day/big-day.component.scss
+++ b/desayunos-arkus/src/app/components/big-day/big-day.component.scss
@@ -1,30 +1,49 @@
-.bigDay {
-  border-radius: 40px;
-  border: solid;
-  border-width: 1px;
-  border-color: rgb(236, 25, 35);
-  width: 250px;
-  height: 200px;
-  display: grid;
-  grid-column: 1/2;
-  grid-row: 1/2;
-  .mat-card-header {
-    display: grid;
+.card {
+  font-size: 1.3em;
+  border-color: lightgray;
+  border-radius: 1.875em;
+  border: solid 2px lightgray;
+  box-shadow: 0px 0px 10px 0px lightgray;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0.625em;
+  height: 12.5em;
+  width: 12.5em;
+  background-color: white;
+  .header {
+    display: flex;
     justify-content: right;
-    .mat-card-title {
-      margin: 0px;
-      height: 30px;
-      font-size: 30px;
-      line-height: 20px;
+    font-size: 1.25em;
+    height: 1.5em;
+    line-height: 1em;
+    margin: 0;
+    margin-bottom: 0.5em;
+    button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border: solid 1px lightgray;
+      width: 2em;
+      height: 2em;
+      font-size: 1em;
     }
   }
-  .mat-card-footer {
-    display: grid;
+
+  .footer {
+    display: flex;
     justify-content: center;
-    font-size: 40px;
+    align-items: center;
+    font-size: 2.25em;
   }
 }
 
-.bigDay:hover {
-  transform: translateY(20px);
+.mat-button,
+.mat-raised-button,
+.mat-icon-button,
+.mat-stroked-button,
+.mat-flat-button,
+.mat-fab,
+.mat-mini-fab {
+  font-size: 20px;
 }
