Grid design on home component

--- a/desayunos-arkus/src/app/components/home/home.component.html
+++ b/desayunos-arkus/src/app/components/home/home.component.html
@@ -1,2 +1,12 @@
 <app-perfil></app-perfil>
-<app-calendar [userData]="userInfo"></app-calendar>
+<div class="main">
+    <div class="header">
+    </div>
+
+    <div class="content">
+        <app-calendar [userData]="userInfo"></app-calendar>
+    </div>
+
+    <div class="footer">
+    </div>
+</div>
