selected-day component
Grid structure on selected-day component, and created daily-list component

--- a/desayunos-arkus/src/app/components/home/home.component.html
+++ b/desayunos-arkus/src/app/components/home/home.component.html
@@ -4,6 +4,7 @@
     </div>
 
     <div class="content">
+        <app-selected-day></app-selected-day>
         <app-calendar [userData]="userInfo"></app-calendar>
     </div>
 
