--- a/desayunos-arkus/src/app/components/big-day/big-day.component.scss
+++ b/desayunos-arkus/src/app/components/big-day/big-day.component.scss
@@ -3,7 +3,7 @@
   border-color: lightgray;
   border-radius: 1.875em;
   border: solid 2px lightgray;
-  box-shadow: 0px 0px 10px 0px lightgray;
+  box-shadow: 0px 0px 10px 0px black;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
