--- a/desayunos-arkus/src/app/components/daily-list/daily-list.component.html
+++ b/desayunos-arkus/src/app/components/daily-list/daily-list.component.html
@@ -1,1 +1,20 @@
-<p>daily-list works!</p>
+<div class="card">
+  <div class="header">
+    <button mat-mini-fab color="'white'">
+      <p style="margin-bottom: 0px;" [(ngModel)]="bfCount" ngDefaultControl>{{bfCount}}</p>
+    </button>
+  </div>
+  <div class="content">
+    <div class="contentWrapper">
+      <div class="listItem" *ngFor="let bf of breakfasts">
+        <mat-icon class="contIcon" [inline]="true">person</mat-icon>
+        <p class="pItem">{{bf.firstName + " " + bf.lastName}}</p>
+        <button mat-mini-fab color="primary"
+          *ngIf="now <= todayLimitDate && (isAdmin || userPersonalData.id === isUser)"
+          (click)="handleDeleteUser(bf.userId)">
+          <mat-icon [inline]="true">close</mat-icon>
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
