--- a/desayunos-arkus/src/app/components/selected-day/selected-day.component.html
+++ b/desayunos-arkus/src/app/components/selected-day/selected-day.component.html
@@ -1,4 +1,4 @@
 <div class="main">
-    <app-big-day></app-big-day>
-    <app-daily-list></app-daily-list>
+    <app-big-day [date]="date"></app-big-day>
+    <app-daily-list [date]="date" [breakfasts]="breakfasts" [userPersonalData]="userData"></app-daily-list>
 </div>
