--- a/desayunos-arkus/src/app/components/calendar/calendar.component.html
+++ b/desayunos-arkus/src/app/components/calendar/calendar.component.html
@@ -16,7 +16,7 @@
     <p>Jueves</p>
     <p>Viernes</p>
     <app-calendar-day *ngFor="let day of days" [date]="day.date" [breakfasts]="day.breakfasts" [userData]="userData"
-      [festiveType]="day.festiveType" [handleDayClick]="handleDayClick" (registered)="ngOnInit()">
+      [festiveType]="day.festiveType" (clicked)="handleDayClick($event)" (registered)="ngOnInit()">
     </app-calendar-day>
   </div>
 </div>
