--- a/desayunos-arkus/src/app/components/daily-list/daily-list.component.scss
+++ b/desayunos-arkus/src/app/components/daily-list/daily-list.component.scss
@@ -31,6 +31,7 @@
   }
   .content {
     overflow-y: auto;
+    padding: 1em;
     .contentWrapper {
       width: fit-content;
       height: fit-content;
